# rust-grpc-example

./: .gitignore  Cargo.toml  README.md  build.rs  db.sql
proto/: devices.proto
src/: lib.rs
src/aggregator/: mod.rs
src/database/: db.rs  mod.rs
src/models/: data.rs  mod.rs
src/services/: data.rs
