[package]
name = "rust-grpc-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "max"
path = "src/bin/max.rs"

[dependencies]
chrono = "0.4.23"
prost = "0.11.3"
prost-types = "0.11.2"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tonic = "0.8.3"

[dev-dependencies]
bytes = "1.3.0"
prost = "0.11.3"

[build-dependencies]

tonic-build = "0.8.4"
